@@ -1,1 +1,2 @@
 - Added the filter gravityflow_step_status_evaluation_approval to allow the status evaluation of approval step to check custom logic (X of Y approvals)
+- Fixed an issue with status export .csv to include duration as a separate column so it is consistent with status export table info
